# HRNet_TRT_Cpp

./: .gitignore  CMakeLists.txt  CMakeLists1.txt
include/C_HRNet/: tensorrt_infer.hpp
src/: angle.cpp  main.cpp  postprocessing.cpp  sequence_detection.cpp  tensorrt_create_engin.cpp  tensorrt_infer.cpp
tests/: test_main.cpp
